// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserForm> should render user profile form 1`] = `
<UserForm
  disabled={false}
  isRegister={false}
  registerUser={[Function]}
  updateUser={[Function]}
  user={
    Object {
      "firstName": "John",
      "lastName": "Doe",
    }
  }
  validateUser={[Function]}
  validationErrors={Object {}}
>
  <Portal
    name="user.form.before"
    props={null}
  />
  <Portal
    name="user.form"
    props={null}
  >
    <div
      className="css-1sbrycg"
    >
      <TextField
        className=""
        errorText=""
        label="user.firstName"
        leftElement={null}
        multiLine={false}
        name="firstName"
        onChange={[Function]}
        placeholder=""
        rightElement={null}
        type="text"
        value="John"
      >
        <FormElement
          className=""
          errorText=""
          hasPlaceholder={true}
          hasUnderline={true}
          hasValue={true}
          htmlFor="firstName"
          isFocused={false}
          label="user.firstName"
          placeholder=""
        >
          <div
            className="css-1vjh8yv "
          >
            <Placeholder
              placeholder=""
              visible={false}
            >
              <div
                className="css-oc0mp css-1jyyyen"
              >
                <Translate
                  className=""
                  params={Object {}}
                  string=""
                >
                  <span
                    className=""
                  />
                </Translate>
              </div>
            </Placeholder>
            <Label
              hasErrorMessage={false}
              htmlFor="firstName"
              isFloating={true}
              isFocused={false}
              label="user.firstName"
            >
              <label
                className="css-u7lqu6 css-16msjt6 css-1fekhao"
                htmlFor="firstName"
              >
                <Translate
                  className=""
                  params={Object {}}
                  string="user.firstName"
                >
                  <span
                    className=""
                  >
                    user.firstName
                  </span>
                </Translate>
              </label>
            </Label>
            <Grid
              className=""
              component="ul"
              wrap={false}
            >
              <ul
                className=" css-h7r55a"
              >
                <GridItem
                  className=""
                  component="li"
                  grow={1}
                  shrink={1}
                >
                  <li
                    className=" css-1gs0ko2"
                  >
                    <Component
                      className="css-keangt"
                      multiLine={false}
                      name="firstName"
                      onChange={[Function]}
                      type="text"
                      validateOnBlur={true}
                      value="John"
                    >
                      <SimpleInput
                        autoComplete={false}
                        autoCorrect={false}
                        className="css-keangt"
                        disabled={false}
                        id={null}
                        multiLine={false}
                        name="firstName"
                        onChange={[Function]}
                        onFocusChange={[Function]}
                        onSanitize={[Function]}
                        onValidate={[Function]}
                        password={false}
                        setRef={[Function]}
                        type="text"
                        validateOnBlur={true}
                        value="John"
                      >
                        <input
                          autoComplete="off"
                          autoCorrect="off"
                          className="css-keangt"
                          disabled={false}
                          id={null}
                          name="firstName"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="text"
                          value="John"
                        />
                      </SimpleInput>
                    </Component>
                  </li>
                </GridItem>
              </ul>
            </Grid>
            <Underline
              hasErrorMessage={false}
              isFocused={false}
            >
              <div
                className="css-ycal4l"
              >
                <div
                  className="css-1tpmuef"
                  style={
                    Object {
                      "borderBottomColor": undefined,
                      "transform": "scale3d(0,1,1)",
                    }
                  }
                />
              </div>
            </Underline>
            <ErrorText
              className={null}
              errorText=""
            >
              <div
                className="css-1g88oka"
              >
                <Translate
                  className=""
                  params={Object {}}
                  string=""
                >
                  <span
                    className=""
                  />
                </Translate>
              </div>
            </ErrorText>
          </div>
        </FormElement>
      </TextField>
    </div>
    <div
      className="css-1sbrycg"
    >
      <TextField
        className=""
        errorText=""
        label="user.lastName"
        leftElement={null}
        multiLine={false}
        name="lastName"
        onChange={[Function]}
        placeholder=""
        rightElement={null}
        type="text"
        value="Doe"
      >
        <FormElement
          className=""
          errorText=""
          hasPlaceholder={true}
          hasUnderline={true}
          hasValue={true}
          htmlFor="lastName"
          isFocused={false}
          label="user.lastName"
          placeholder=""
        >
          <div
            className="css-1vjh8yv "
          >
            <Placeholder
              placeholder=""
              visible={false}
            >
              <div
                className="css-oc0mp css-1jyyyen"
              >
                <Translate
                  className=""
                  params={Object {}}
                  string=""
                >
                  <span
                    className=""
                  />
                </Translate>
              </div>
            </Placeholder>
            <Label
              hasErrorMessage={false}
              htmlFor="lastName"
              isFloating={true}
              isFocused={false}
              label="user.lastName"
            >
              <label
                className="css-u7lqu6 css-16msjt6 css-1fekhao"
                htmlFor="lastName"
              >
                <Translate
                  className=""
                  params={Object {}}
                  string="user.lastName"
                >
                  <span
                    className=""
                  >
                    user.lastName
                  </span>
                </Translate>
              </label>
            </Label>
            <Grid
              className=""
              component="ul"
              wrap={false}
            >
              <ul
                className=" css-h7r55a"
              >
                <GridItem
                  className=""
                  component="li"
                  grow={1}
                  shrink={1}
                >
                  <li
                    className=" css-1gs0ko2"
                  >
                    <Component
                      className="css-keangt"
                      multiLine={false}
                      name="lastName"
                      onChange={[Function]}
                      type="text"
                      validateOnBlur={true}
                      value="Doe"
                    >
                      <SimpleInput
                        autoComplete={false}
                        autoCorrect={false}
                        className="css-keangt"
                        disabled={false}
                        id={null}
                        multiLine={false}
                        name="lastName"
                        onChange={[Function]}
                        onFocusChange={[Function]}
                        onSanitize={[Function]}
                        onValidate={[Function]}
                        password={false}
                        setRef={[Function]}
                        type="text"
                        validateOnBlur={true}
                        value="Doe"
                      >
                        <input
                          autoComplete="off"
                          autoCorrect="off"
                          className="css-keangt"
                          disabled={false}
                          id={null}
                          name="lastName"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="text"
                          value="Doe"
                        />
                      </SimpleInput>
                    </Component>
                  </li>
                </GridItem>
              </ul>
            </Grid>
            <Underline
              hasErrorMessage={false}
              isFocused={false}
            >
              <div
                className="css-ycal4l"
              >
                <div
                  className="css-1tpmuef"
                  style={
                    Object {
                      "borderBottomColor": undefined,
                      "transform": "scale3d(0,1,1)",
                    }
                  }
                />
              </div>
            </Underline>
            <ErrorText
              className={null}
              errorText=""
            >
              <div
                className="css-1g88oka"
              >
                <Translate
                  className=""
                  params={Object {}}
                  string=""
                >
                  <span
                    className=""
                  />
                </Translate>
              </div>
            </ErrorText>
          </div>
        </FormElement>
      </TextField>
    </div>
    <div
      className="css-1sbrycg"
    >
      <TextField
        className=""
        errorText=""
        label="user.mail"
        leftElement={null}
        multiLine={false}
        name="mail"
        onChange={[Function]}
        placeholder=""
        rightElement={null}
        type="text"
        value=""
      >
        <FormElement
          className=""
          errorText=""
          hasPlaceholder={true}
          hasUnderline={true}
          hasValue={false}
          htmlFor="mail"
          isFocused={false}
          label="user.mail"
          placeholder=""
        >
          <div
            className="css-1vjh8yv "
          >
            <Placeholder
              placeholder=""
              visible={false}
            >
              <div
                className="css-oc0mp css-1jyyyen"
              >
                <Translate
                  className=""
                  params={Object {}}
                  string=""
                >
                  <span
                    className=""
                  />
                </Translate>
              </div>
            </Placeholder>
            <Label
              hasErrorMessage={false}
              htmlFor="mail"
              isFloating={false}
              isFocused={false}
              label="user.mail"
            >
              <label
                className="css-u7lqu6 css-1fekhao"
                htmlFor="mail"
              >
                <Translate
                  className=""
                  params={Object {}}
                  string="user.mail"
                >
                  <span
                    className=""
                  >
                    user.mail
                  </span>
                </Translate>
              </label>
            </Label>
            <Grid
              className=""
              component="ul"
              wrap={false}
            >
              <ul
                className=" css-h7r55a"
              >
                <GridItem
                  className=""
                  component="li"
                  grow={1}
                  shrink={1}
                >
                  <li
                    className=" css-1gs0ko2"
                  >
                    <Component
                      className="css-keangt"
                      multiLine={false}
                      name="mail"
                      onChange={[Function]}
                      type="text"
                      validateOnBlur={true}
                      value=""
                    >
                      <SimpleInput
                        autoComplete={false}
                        autoCorrect={false}
                        className="css-keangt"
                        disabled={false}
                        id={null}
                        multiLine={false}
                        name="mail"
                        onChange={[Function]}
                        onFocusChange={[Function]}
                        onSanitize={[Function]}
                        onValidate={[Function]}
                        password={false}
                        setRef={[Function]}
                        type="text"
                        validateOnBlur={true}
                        value=""
                      >
                        <input
                          autoComplete="off"
                          autoCorrect="off"
                          className="css-keangt"
                          disabled={false}
                          id={null}
                          name="mail"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="text"
                          value=""
                        />
                      </SimpleInput>
                    </Component>
                  </li>
                </GridItem>
              </ul>
            </Grid>
            <Underline
              hasErrorMessage={false}
              isFocused={false}
            >
              <div
                className="css-ycal4l"
              >
                <div
                  className="css-1tpmuef"
                  style={
                    Object {
                      "borderBottomColor": undefined,
                      "transform": "scale3d(0,1,1)",
                    }
                  }
                />
              </div>
            </Underline>
            <ErrorText
              className={null}
              errorText=""
            >
              <div
                className="css-1g88oka"
              >
                <Translate
                  className=""
                  params={Object {}}
                  string=""
                >
                  <span
                    className=""
                  />
                </Translate>
              </div>
            </ErrorText>
          </div>
        </FormElement>
      </TextField>
    </div>
    <div
      className="css-eaovj6"
    >
      <TextField
        className="css-1a2wdlb"
        disabled={true}
        errorText=""
        label="user.password"
        leftElement={null}
        multiLine={false}
        name="password"
        onChange={[Function]}
        placeholder=""
        rightElement={
          <LockIcon
            size="24"
          />
        }
        type="password"
        value="**********"
      >
        <FormElement
          className="css-1a2wdlb"
          errorText=""
          hasPlaceholder={true}
          hasUnderline={true}
          hasValue={true}
          htmlFor="password"
          isFocused={false}
          label="user.password"
          placeholder=""
        >
          <div
            className="css-1vjh8yv css-1a2wdlb"
          >
            <Placeholder
              placeholder=""
              visible={false}
            >
              <div
                className="css-oc0mp css-1jyyyen"
              >
                <Translate
                  className=""
                  params={Object {}}
                  string=""
                >
                  <span
                    className=""
                  />
                </Translate>
              </div>
            </Placeholder>
            <Label
              hasErrorMessage={false}
              htmlFor="password"
              isFloating={true}
              isFocused={false}
              label="user.password"
            >
              <label
                className="css-u7lqu6 css-16msjt6 css-1fekhao"
                htmlFor="password"
              >
                <Translate
                  className=""
                  params={Object {}}
                  string="user.password"
                >
                  <span
                    className=""
                  >
                    user.password
                  </span>
                </Translate>
              </label>
            </Label>
            <Grid
              className=""
              component="ul"
              wrap={false}
            >
              <ul
                className=" css-h7r55a"
              >
                <GridItem
                  className=""
                  component="li"
                  grow={1}
                  shrink={1}
                >
                  <li
                    className=" css-1gs0ko2"
                  >
                    <Component
                      className="css-keangt"
                      disabled={true}
                      multiLine={false}
                      name="password"
                      onChange={[Function]}
                      type="password"
                      validateOnBlur={true}
                      value="**********"
                    >
                      <SimpleInput
                        autoComplete={false}
                        autoCorrect={false}
                        className="css-keangt"
                        disabled={true}
                        id={null}
                        multiLine={false}
                        name="password"
                        onChange={[Function]}
                        onFocusChange={[Function]}
                        onSanitize={[Function]}
                        onValidate={[Function]}
                        password={false}
                        setRef={[Function]}
                        type="password"
                        validateOnBlur={true}
                        value="**********"
                      >
                        <input
                          autoComplete="off"
                          autoCorrect="off"
                          className="css-keangt"
                          disabled={true}
                          id={null}
                          name="password"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="password"
                          value="**********"
                        />
                      </SimpleInput>
                    </Component>
                  </li>
                </GridItem>
                <GridItem
                  className="css-h3zoee"
                  component="li"
                  grow={0}
                  shrink={1}
                >
                  <li
                    className="css-h3zoee"
                  >
                    <LockIcon
                      size="24"
                    >
                      <Icon
                        className=""
                        color={null}
                        content="<path d=\\"M0 0h24v24H0z\\" fill=\\"none\\"/><path d=\\"M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z\\"/>"
                        size="24"
                        viewBox="0 0 24 24"
                      >
                        <svg
                          className="css-yys9hb "
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "<path d=\\"M0 0h24v24H0z\\" fill=\\"none\\"/><path d=\\"M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z\\"/>",
                            }
                          }
                          style={
                            Object {
                              "fill": null,
                              "fontSize": "24",
                            }
                          }
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        />
                      </Icon>
                    </LockIcon>
                  </li>
                </GridItem>
              </ul>
            </Grid>
            <Underline
              hasErrorMessage={false}
              isFocused={false}
            >
              <div
                className="css-ycal4l"
              >
                <div
                  className="css-1tpmuef"
                  style={
                    Object {
                      "borderBottomColor": undefined,
                      "transform": "scale3d(0,1,1)",
                    }
                  }
                />
              </div>
            </Underline>
            <ErrorText
              className={null}
              errorText=""
            >
              <div
                className="css-1g88oka"
              >
                <Translate
                  className=""
                  params={Object {}}
                  string=""
                >
                  <span
                    className=""
                  />
                </Translate>
              </div>
            </ErrorText>
          </div>
        </FormElement>
      </TextField>
    </div>
    <div
      className="css-1sbrycg"
    >
      <Link
        className="css-ncwxpj"
        disabled={false}
        href="/user/password"
      >
        <div
          aria-hidden={true}
          className="css-c6ki83 css-ncwxpj"
          data-test-id="link: /user/password"
          onClick={[Function]}
          role="link"
        >
          <Translate
            className=""
            params={Object {}}
            string="password.update"
          >
            <span
              className=""
            >
              password.update
            </span>
          </Translate>
        </div>
      </Link>
    </div>
  </Portal>
  <Portal
    name="user.form.after"
    props={null}
  />
</UserForm>
`;

exports[`<UserForm> should render user register form 1`] = `
<UserForm
  disabled={false}
  isRegister={true}
  registerUser={[Function]}
  updateUser={[Function]}
  user={Object {}}
  validateUser={[Function]}
  validationErrors={Object {}}
>
  <Portal
    name="user.form.before"
    props={null}
  />
  <Portal
    name="user.form"
    props={null}
  >
    <div
      className="css-1sbrycg"
    >
      <TextField
        className=""
        errorText=""
        label="user.firstName"
        leftElement={null}
        multiLine={false}
        name="firstName"
        onChange={[Function]}
        placeholder=""
        rightElement={null}
        type="text"
        value=""
      >
        <FormElement
          className=""
          errorText=""
          hasPlaceholder={true}
          hasUnderline={true}
          hasValue={false}
          htmlFor="firstName"
          isFocused={false}
          label="user.firstName"
          placeholder=""
        >
          <div
            className="css-1vjh8yv "
          >
            <Placeholder
              placeholder=""
              visible={false}
            >
              <div
                className="css-oc0mp css-1jyyyen"
              >
                <Translate
                  className=""
                  params={Object {}}
                  string=""
                >
                  <span
                    className=""
                  />
                </Translate>
              </div>
            </Placeholder>
            <Label
              hasErrorMessage={false}
              htmlFor="firstName"
              isFloating={false}
              isFocused={false}
              label="user.firstName"
            >
              <label
                className="css-u7lqu6 css-1fekhao"
                htmlFor="firstName"
              >
                <Translate
                  className=""
                  params={Object {}}
                  string="user.firstName"
                >
                  <span
                    className=""
                  >
                    user.firstName
                  </span>
                </Translate>
              </label>
            </Label>
            <Grid
              className=""
              component="ul"
              wrap={false}
            >
              <ul
                className=" css-h7r55a"
              >
                <GridItem
                  className=""
                  component="li"
                  grow={1}
                  shrink={1}
                >
                  <li
                    className=" css-1gs0ko2"
                  >
                    <Component
                      className="css-keangt"
                      multiLine={false}
                      name="firstName"
                      onChange={[Function]}
                      type="text"
                      validateOnBlur={true}
                      value=""
                    >
                      <SimpleInput
                        autoComplete={false}
                        autoCorrect={false}
                        className="css-keangt"
                        disabled={false}
                        id={null}
                        multiLine={false}
                        name="firstName"
                        onChange={[Function]}
                        onFocusChange={[Function]}
                        onSanitize={[Function]}
                        onValidate={[Function]}
                        password={false}
                        setRef={[Function]}
                        type="text"
                        validateOnBlur={true}
                        value=""
                      >
                        <input
                          autoComplete="off"
                          autoCorrect="off"
                          className="css-keangt"
                          disabled={false}
                          id={null}
                          name="firstName"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="text"
                          value=""
                        />
                      </SimpleInput>
                    </Component>
                  </li>
                </GridItem>
              </ul>
            </Grid>
            <Underline
              hasErrorMessage={false}
              isFocused={false}
            >
              <div
                className="css-ycal4l"
              >
                <div
                  className="css-1tpmuef"
                  style={
                    Object {
                      "borderBottomColor": undefined,
                      "transform": "scale3d(0,1,1)",
                    }
                  }
                />
              </div>
            </Underline>
            <ErrorText
              className={null}
              errorText=""
            >
              <div
                className="css-1g88oka"
              >
                <Translate
                  className=""
                  params={Object {}}
                  string=""
                >
                  <span
                    className=""
                  />
                </Translate>
              </div>
            </ErrorText>
          </div>
        </FormElement>
      </TextField>
    </div>
    <div
      className="css-1sbrycg"
    >
      <TextField
        className=""
        errorText=""
        label="user.lastName"
        leftElement={null}
        multiLine={false}
        name="lastName"
        onChange={[Function]}
        placeholder=""
        rightElement={null}
        type="text"
        value=""
      >
        <FormElement
          className=""
          errorText=""
          hasPlaceholder={true}
          hasUnderline={true}
          hasValue={false}
          htmlFor="lastName"
          isFocused={false}
          label="user.lastName"
          placeholder=""
        >
          <div
            className="css-1vjh8yv "
          >
            <Placeholder
              placeholder=""
              visible={false}
            >
              <div
                className="css-oc0mp css-1jyyyen"
              >
                <Translate
                  className=""
                  params={Object {}}
                  string=""
                >
                  <span
                    className=""
                  />
                </Translate>
              </div>
            </Placeholder>
            <Label
              hasErrorMessage={false}
              htmlFor="lastName"
              isFloating={false}
              isFocused={false}
              label="user.lastName"
            >
              <label
                className="css-u7lqu6 css-1fekhao"
                htmlFor="lastName"
              >
                <Translate
                  className=""
                  params={Object {}}
                  string="user.lastName"
                >
                  <span
                    className=""
                  >
                    user.lastName
                  </span>
                </Translate>
              </label>
            </Label>
            <Grid
              className=""
              component="ul"
              wrap={false}
            >
              <ul
                className=" css-h7r55a"
              >
                <GridItem
                  className=""
                  component="li"
                  grow={1}
                  shrink={1}
                >
                  <li
                    className=" css-1gs0ko2"
                  >
                    <Component
                      className="css-keangt"
                      multiLine={false}
                      name="lastName"
                      onChange={[Function]}
                      type="text"
                      validateOnBlur={true}
                      value=""
                    >
                      <SimpleInput
                        autoComplete={false}
                        autoCorrect={false}
                        className="css-keangt"
                        disabled={false}
                        id={null}
                        multiLine={false}
                        name="lastName"
                        onChange={[Function]}
                        onFocusChange={[Function]}
                        onSanitize={[Function]}
                        onValidate={[Function]}
                        password={false}
                        setRef={[Function]}
                        type="text"
                        validateOnBlur={true}
                        value=""
                      >
                        <input
                          autoComplete="off"
                          autoCorrect="off"
                          className="css-keangt"
                          disabled={false}
                          id={null}
                          name="lastName"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="text"
                          value=""
                        />
                      </SimpleInput>
                    </Component>
                  </li>
                </GridItem>
              </ul>
            </Grid>
            <Underline
              hasErrorMessage={false}
              isFocused={false}
            >
              <div
                className="css-ycal4l"
              >
                <div
                  className="css-1tpmuef"
                  style={
                    Object {
                      "borderBottomColor": undefined,
                      "transform": "scale3d(0,1,1)",
                    }
                  }
                />
              </div>
            </Underline>
            <ErrorText
              className={null}
              errorText=""
            >
              <div
                className="css-1g88oka"
              >
                <Translate
                  className=""
                  params={Object {}}
                  string=""
                >
                  <span
                    className=""
                  />
                </Translate>
              </div>
            </ErrorText>
          </div>
        </FormElement>
      </TextField>
    </div>
    <div
      className="css-1sbrycg"
    >
      <TextField
        className=""
        errorText=""
        label="user.mail"
        leftElement={null}
        multiLine={false}
        name="mail"
        onChange={[Function]}
        placeholder=""
        rightElement={null}
        type="text"
        value=""
      >
        <FormElement
          className=""
          errorText=""
          hasPlaceholder={true}
          hasUnderline={true}
          hasValue={false}
          htmlFor="mail"
          isFocused={false}
          label="user.mail"
          placeholder=""
        >
          <div
            className="css-1vjh8yv "
          >
            <Placeholder
              placeholder=""
              visible={false}
            >
              <div
                className="css-oc0mp css-1jyyyen"
              >
                <Translate
                  className=""
                  params={Object {}}
                  string=""
                >
                  <span
                    className=""
                  />
                </Translate>
              </div>
            </Placeholder>
            <Label
              hasErrorMessage={false}
              htmlFor="mail"
              isFloating={false}
              isFocused={false}
              label="user.mail"
            >
              <label
                className="css-u7lqu6 css-1fekhao"
                htmlFor="mail"
              >
                <Translate
                  className=""
                  params={Object {}}
                  string="user.mail"
                >
                  <span
                    className=""
                  >
                    user.mail
                  </span>
                </Translate>
              </label>
            </Label>
            <Grid
              className=""
              component="ul"
              wrap={false}
            >
              <ul
                className=" css-h7r55a"
              >
                <GridItem
                  className=""
                  component="li"
                  grow={1}
                  shrink={1}
                >
                  <li
                    className=" css-1gs0ko2"
                  >
                    <Component
                      className="css-keangt"
                      multiLine={false}
                      name="mail"
                      onChange={[Function]}
                      type="text"
                      validateOnBlur={true}
                      value=""
                    >
                      <SimpleInput
                        autoComplete={false}
                        autoCorrect={false}
                        className="css-keangt"
                        disabled={false}
                        id={null}
                        multiLine={false}
                        name="mail"
                        onChange={[Function]}
                        onFocusChange={[Function]}
                        onSanitize={[Function]}
                        onValidate={[Function]}
                        password={false}
                        setRef={[Function]}
                        type="text"
                        validateOnBlur={true}
                        value=""
                      >
                        <input
                          autoComplete="off"
                          autoCorrect="off"
                          className="css-keangt"
                          disabled={false}
                          id={null}
                          name="mail"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="text"
                          value=""
                        />
                      </SimpleInput>
                    </Component>
                  </li>
                </GridItem>
              </ul>
            </Grid>
            <Underline
              hasErrorMessage={false}
              isFocused={false}
            >
              <div
                className="css-ycal4l"
              >
                <div
                  className="css-1tpmuef"
                  style={
                    Object {
                      "borderBottomColor": undefined,
                      "transform": "scale3d(0,1,1)",
                    }
                  }
                />
              </div>
            </Underline>
            <ErrorText
              className={null}
              errorText=""
            >
              <div
                className="css-1g88oka"
              >
                <Translate
                  className=""
                  params={Object {}}
                  string=""
                >
                  <span
                    className=""
                  />
                </Translate>
              </div>
            </ErrorText>
          </div>
        </FormElement>
      </TextField>
    </div>
    <div
      className="css-1sbrycg"
    >
      <TextField
        className=""
        errorText=""
        label="user.password"
        leftElement={null}
        multiLine={false}
        name="password"
        onChange={[Function]}
        placeholder=""
        rightElement={null}
        type="password"
        value=""
      >
        <FormElement
          className=""
          errorText=""
          hasPlaceholder={true}
          hasUnderline={true}
          hasValue={false}
          htmlFor="password"
          isFocused={false}
          label="user.password"
          placeholder=""
        >
          <div
            className="css-1vjh8yv "
          >
            <Placeholder
              placeholder=""
              visible={false}
            >
              <div
                className="css-oc0mp css-1jyyyen"
              >
                <Translate
                  className=""
                  params={Object {}}
                  string=""
                >
                  <span
                    className=""
                  />
                </Translate>
              </div>
            </Placeholder>
            <Label
              hasErrorMessage={false}
              htmlFor="password"
              isFloating={false}
              isFocused={false}
              label="user.password"
            >
              <label
                className="css-u7lqu6 css-1fekhao"
                htmlFor="password"
              >
                <Translate
                  className=""
                  params={Object {}}
                  string="user.password"
                >
                  <span
                    className=""
                  >
                    user.password
                  </span>
                </Translate>
              </label>
            </Label>
            <Grid
              className=""
              component="ul"
              wrap={false}
            >
              <ul
                className=" css-h7r55a"
              >
                <GridItem
                  className=""
                  component="li"
                  grow={1}
                  shrink={1}
                >
                  <li
                    className=" css-1gs0ko2"
                  >
                    <Component
                      className="css-keangt"
                      multiLine={false}
                      name="password"
                      onChange={[Function]}
                      type="password"
                      validateOnBlur={true}
                      value=""
                    >
                      <SimpleInput
                        autoComplete={false}
                        autoCorrect={false}
                        className="css-keangt"
                        disabled={false}
                        id={null}
                        multiLine={false}
                        name="password"
                        onChange={[Function]}
                        onFocusChange={[Function]}
                        onSanitize={[Function]}
                        onValidate={[Function]}
                        password={false}
                        setRef={[Function]}
                        type="password"
                        validateOnBlur={true}
                        value=""
                      >
                        <input
                          autoComplete="off"
                          autoCorrect="off"
                          className="css-keangt"
                          disabled={false}
                          id={null}
                          name="password"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="password"
                          value=""
                        />
                      </SimpleInput>
                    </Component>
                  </li>
                </GridItem>
              </ul>
            </Grid>
            <Underline
              hasErrorMessage={false}
              isFocused={false}
            >
              <div
                className="css-ycal4l"
              >
                <div
                  className="css-1tpmuef"
                  style={
                    Object {
                      "borderBottomColor": undefined,
                      "transform": "scale3d(0,1,1)",
                    }
                  }
                />
              </div>
            </Underline>
            <ErrorText
              className={null}
              errorText=""
            >
              <div
                className="css-1g88oka"
              >
                <Translate
                  className=""
                  params={Object {}}
                  string=""
                >
                  <span
                    className=""
                  />
                </Translate>
              </div>
            </ErrorText>
          </div>
        </FormElement>
      </TextField>
    </div>
    <div
      className="css-12wp4jo"
      data-test-id="RegisterButton"
    >
      <RippleButton
        className="css-63oe3q"
        disabled={false}
        flat={false}
        onClick={[Function]}
        rippleClassName=""
        rippleSize={null}
        testId="Button"
        type="secondary"
        wrapContent={true}
      >
        <Button
          className="css-63oe3q"
          disabled={false}
          flat={false}
          onClick={[Function]}
          testId="Button"
          type="secondary"
          wrapContent={false}
        >
          <Button
            className="css-187rja2 css-63oe3q"
            disabled={false}
            onClick={[Function]}
            testId="Button"
          >
            <button
              className="css-187rja2 css-63oe3q css-1rn65c0"
              data-test-id="Button"
              disabled={false}
              onClick={[Function]}
            >
              <Ripple
                className="css-8s1fw2 "
                color="#000"
                disabled={false}
                fill={true}
                onComplete={[Function]}
                overflow={false}
                size={null}
              >
                <div
                  aria-hidden={true}
                  className="css-8s1fw2 "
                  data-test-id="Ripple"
                  onClick={[Function]}
                  style={
                    Object {
                      "overflow": "hidden",
                      "position": "relative",
                    }
                  }
                >
                  <Translate
                    className=""
                    params={Object {}}
                    string="register.button"
                  >
                    <span
                      className=""
                    >
                      register.button
                    </span>
                  </Translate>
                </div>
              </Ripple>
            </button>
          </Button>
        </Button>
      </RippleButton>
    </div>
  </Portal>
  <Portal
    name="user.form.after"
    props={null}
  />
</UserForm>
`;
